fixed alignment for graph widgets with job widget on dashboard

--- a/awx/ui/static/less/new-dashboard.less
+++ b/awx/ui/static/less/new-dashboard.less
@@ -45,6 +45,14 @@
     background-image: none
 }
 
+ .left-side {
+      padding-right: 7px;
+  }
+
+  .right-side {
+      padding-left: 7px;
+  }
+
     .custon-carousel{
         width:150px;
       height:200px;
